<resources>
    <string name="app_name">VonVimeo</string>
    <string name="nav_home_menu">首页</string>
    <string name="nav_explore_menu">发现</string>
    <string name="toolbar_my_likes_menu">我喜欢的视频</string>
    <string name="nav_my_likes_menu">喜欢</string>
    <string name="nav_album_menu">收藏视频集</string>
    <string name="nav_all_video_menu">所有视频</string>
    <string name="nav_projects_menu">项目</string>
    <string name="nav_settings_menu">设置</string>
    <string name="nav_drawer_open">open drawer</string>
    <string name="nav_drawer_close">close drawer</string>
    <string name="recycler_item_footer_more_loading_text">正在加载更多。。。</string>
    <string name="recycler_item_footer_load_nomore_text">没有更多</string>
    <string name="videos">视频</string>
    <string name="channels">频道</string>
    <string name="groups">群组</string>
    <string name="albums">Albums</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="download">Download</string>
    <string name="language_english">English</string>
    <string name="language_spanish">Español</string>
    <string name="language_portuguese">Português</string>
    <string name="language_french">Français</string>
    <string name="language_german">Deutsch</string>
    <string name="language_japanese">日本語</string>
    <string name="language_korean">한국어</string>
    <string name="video_seetings_nav_general_menu">General</string>
    <string name="video_seetings_nav_collaboration_menu">Collaboration</string>
    <string name="video_seetings_nav_embed_menu">Embed</string>
    <string name="video_seetings_nav_interaction_tools_menu">Interaction tools</string>
    <string name="video_seetings_nav_distribution_menu">Distribution</string>
    <string name="video_seetings_nav_stats_menu">Stats</string>
    <string name="video_seetings_nav_upgrade_menu">Upgrade</string>
    <string name="expore_spinner_manage_myvideos">My videos</string>
    <string name="expore_spinner_manage_viewstats">View stats</string>
    <string name="expore_spinner_manage_sellvideos">Sell videos</string>
    <string name="expore_spinner_manage_videoschool">Video School</string>
    <string name="explore_spinner_manage_upgrade">Upgrade</string>
    <string name="explore_spinner_watch_staffpicks">Staff Picks</string>
    <string name="explore_spinner_watch_categaroties">Categaroties</string>
    <string name="explore_spinner_watch_channels">Channels</string>
    <string name="explore_spinner_watch_groups">Groups</string>
    <string name="my_video_spinner_title">Title</string>
    <string name="my_video_spinner_date_modified">Date modified</string>
    <string name="my_video_spinner_date_added">Date added</string>
    <string name="my_video_spinner_duration">Duration</string>
    <string name="sort_title">Title</string>
    <string name="sort_date_modified">Date modified</string>
    <string name="sort_modified">Modified</string>
    <string name="sort_date_added">Date added</string>
    <string name="sort_duration">Duration</string>
    <string name="sort_date">Date</string>
    <string name="sort_alphabetical">ALphabetical</string>
    <string name="sort_plays">Plays</string>
    <string name="sort_likes">Likes</string>
    <string name="sort_comments">Comments</string>
    <string name="sort_videos">Videos</string>
    <string name="sort_name">name</string>
    <string name="sort_members">Members</string>
    <string name="sort_followers">Followers</string>
    <string name="sort_all">All</string>
    <string name="sort_uploads">Uploads</string>
    <string name="sort_appearances">Appearances</string>
    <string name="sort_channels">Channels</string>
    <string name="sort_groups">Groups</string>
    <string name="sort_categories">Categories</string>
    <string name="sort_tags">Tags</string>
    <string name="inbox">Inbox</string>
    <string name="unread">Unread</string>
    <string name="read">Read</string>
    <string name="sent">Sent</string>
    <string name="show_people"></string>
    <string name="show_categories">Categories</string>
    <string name="show_groups">Groups</string>
    <string name="show_channels">Channels</string>
    <string name="your_stuff">YOUR STUFF</string>
    <string name="portfolios">Portfolios</string>
    <string name="weekly">Weekly</string>
    <string name="total_limit">Total limit</string>
    <string name="button_upload_text">Choose files</string>
    <string name="upload_privacy_settings_anyone_rb_text">Anyone can see this video</string>
    <string name="upload_privacy_settings_only_i_rb_text">Only I can see this video</string>
    <string name="upload_privacy_settings_only_choose_rb_text">Only people I choose can see this video</string>
    <string name="upload_privacy_settings_only_follow_rb_text">Only people I follow can see this video</string>
    <string name="upload_privacy_settings_only_with_password_rb_text">Only people with a password can see this video</string>
    <string name="cancle">关闭</string>
    <string name="ok">确定</string>
    <string name="replace">Replace</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="clear_all">Clear all</string>
    <string name="creat_a_album">Create a Album</string>
    <string name="album_name">A Name</string>
    <string name="album_desc">A Description</string>
    <string name="album_privacy_settings_anyone_rb_text">Anyone </string>
    <string name="album_privacy_settings_people_with_password_rb_text">Only people with a password</string>
    <string name="album_delete_tv_text">Delete this album</string>
    <string name="snack_create_a_bucket_text"></string>
    <string name="snack_delete_a_bucket_text"></string>
    <string name="search_my_videos">Search my videos</string>
    <string name="search">Search </string>
    <string name="creat_a_channle">Create a Channle</string>
    <string name="channle_name">A Name</string>
    <string name="channle_desc">A Description</string>
    <string name="channle_privacy_settings_anyone_rb_text">Anyone can see this channle</string>
    <string name="channle_privacy_settings_moderators_rb_text">Only moderators can see this channle</string>
    <string name="channle_privacy_settings_moderators_and_choose_rb_text">Only moderators and people I choose can see
        this channle</string>
    <string name="snack_create_a_channel_text"></string>
    <string name="snack_delete_a_channel_text"></string>
    <string name="creat_a_group">Create a Group</string>
    <string name="group_name">A Name</string>
    <string name="group_desc">A Description</string>
    <string name="group_privacy_settings_anyone_rb_text">Anyone can see this group</string>
    <string name="group_privacy_settings_members_rb_text">Only members can see this group</string>
    <string name="snack_delete_a_group_text"></string>
    <string name="snack_create_a_group_text"></string>
    <string name="creat_a_project">Create a Project</string>
    <string name="project_name">Project Name</string>
    <string name="edit_project">Edit project</string>
    <string name="snack_delete_a_project_text"></string>
    <string name="snack_create_a_project_text"></string>
    <string name="snack_edit_a_project_text"></string>
    <string name="snack_the_name_of_project_is_not_null"></string>
    <string name="dialog_delete_this_project_title_tv">Delete this project?</string>
    <string name="dialog_delete_this_project_content_tv">Are you sure want to delete this project?</string>
    <string name="dialog_create_an_on_demand_page_title">Create an OnDemandPage</string>
    <string name="on_demand_page_type_settings">Type Settings</string>
    <string name="on_demand_page_type_settings_film_rb_text">Film</string>
    <string name="on_demand_page_type_settings_series_rb_text">Series</string>
    <string name="dialog_edit_an_on_demand_page_title">Edit an OnDemandPage</string>
    <string name="edit_poster_of_an_on_demand_page_active_settings_text">Active Settings</string>
    <string name="edit_poster_of_an_on_demand_page_active_film_rb_text">True</string>
    <string name="edit_poster_of_an_on_demand_page_active_series_rb_text">False</string>
    <string name="dialog_edit_poster_of_an_on_demand_page_active_title">Edit a Poster</string>
    <string name="edit_background_of_an_on_demand_page_active_settings_text">Active Settings</string>
    <string name="edit_background_of_an_on_demand_page_active_film_rb_text">True</string>
    <string name="edit_background_of_an_on_demand_page_active_series_rb_text">False</string>
    <string name="dialog_edit_background_of_an_on_demand_page_active_title">Edit a Background</string>
    <string name="dialog_create_a_promotion_title">Create a Promotion</string>
    <string name="promotion_type_settings">Type Settings</string>
    <string name="promotion_type_settings_batch_rb_text">Batch</string>
    <string name="promotion_type_settings_single_rb_text">Single</string>
    <string name="dialog_create_a_poster_title">Create a Poster</string>
    <string name="dialog_create_a_background_title">Create a Poster</string>
    <string name="name">名称</string>
    <string name="title">Title</string>
    <string name="description">说明</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="language_settings">Language</string>
    <string name="type">Type</string>
    <string name="url">网址</string>
    <string name="channel_detail_start_bt_text">开始观看</string>
    <string name="channel_detail_share">分享</string>
    <string name="channel_detail_follow">关注</string>
    <string name="s">的</string>
    <string name="watched_history">观看历史</string>
    <string name="save">Save</string>
    <string name="email_share_title">-- 来自VonVimeo(Android APP for Vimeo)的分享</string>
    <string name="detail_toolbar_overflow_menu_share_create_chooser_title">分享</string>
    <string name="detail_toolbar_overflow_menu_share_footer_text">-- 来自VonVimeo(Android APP for Vimeo)的分享</string>
    <string name="detail_toolbar_overflow_menu_open_in_browser_create_chooser_title">请选择浏览器</string>
    <string name="dialog_login_bt">登陆Vimeo</string>
    <string name="dialog_login_desc">登陆你的Vimeo帐号使用vonvimeo的全部功能</string>
    <string name="profile_logout">登出</string>
    <string name="follow">关注用户</string>
    <string name="unfollow">取消关注</string>
    <string name="profile_share_user_profile">分享用户资料</string>
    <string name="unfollowed_successful">已经取消关注</string>
    <string name="followed_successful">已经成功关注</string>
    <string name="unfollowed_error">取消关注出错，请重试！</string>
    <string name="followed_error">关注用户出错，可能被用户拉黑或者超出关注上限！</string>
    <string name="edit_user_profile_toobar_title">编辑个人资料</string>
    <string name="album_delete">删除</string>
    <string name="no_checked">取消全选</string>
    <string name="all_checked">全选</string>
    <string name="share">分享</string>
    <string name="seetings_nav_account_menu">Account</string>
    <string name="seetings_nav_profile_menu">Profile</string>
    <string name="seetings_nav_notifiactions_menu">Notifications</string>
    <string name="seetings_nav_viewing_preferences_menu">Viewing preferences</string>
    <string name="seetings_nav_marketing_menu">Marketing</string>
    <string name="seetings_nav_connected_aps_menu">Connected apps</string>
    <string name="seetings_nav_billing_menu">Billing</string>
    <string name="seetings_nav_videos_menu">Videos</string>
    <string name="seetings_nav_on_demand_menu">On Demand</string>
    <string name="seetings_nav_upgrade_menu">Upgrade</string>
    <string name="professionals_compare_plans">Compare plans</string>
    <string name="professionals_vimeo_pro">Vimeo PRO</string>
    <string name="professionals_vimeo_bussiness">Vimeo Bussiness</string>
    <string name="professionals_vimeo_live">Compare live</string>
    <string name="professionals_vimeo_plus">Vimeo Plus</string>
    <string name="professionals_vimeo_ott">Vimeo OTT</string>
</resources>