<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/video_settings_nav_general"
            android:icon="@drawable/ic_keyboard_arrow_right_black_36dp"
            android:title="@string/video_seetings_nav_general_menu" />

        <item
            android:id="@+id/video_settings_nav_collaboration"
            android:icon="@drawable/ic_keyboard_arrow_right_black_36dp"
            android:title="@string/video_seetings_nav_collaboration_menu" />

        <item
            android:id="@+id/video_settings_nav_embed"
            android:icon="@drawable/ic_keyboard_arrow_right_black_36dp"
            android:title="@string/video_seetings_nav_embed_menu" />

        <item
            android:id="@+id/video_settings_nav_interaction_tools"
            android:icon="@drawable/ic_keyboard_arrow_right_black_36dp"
            android:title="@string/video_seetings_nav_interaction_tools_menu" />

        <item
            android:id="@+id/video_settings_nav_distribution"
            android:icon="@drawable/ic_keyboard_arrow_right_black_36dp"
            android:title="@string/video_seetings_nav_distribution_menu"/>

        <item
            android:id="@+id/video_settings_nav_stats"
            android:icon="@drawable/ic_keyboard_arrow_right_black_36dp"
            android:title="@string/video_seetings_nav_stats_menu"/>


    </group>

    <group android:id="@+id/group2">
        <item
            android:id="@+id/nav_upgrade"
            android:title="@string/video_seetings_nav_upgrade_menu" />
    </group>

</menu>