<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/user_following_sort"
        android:icon="@drawable/ic_more"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/user_following_sort_date"
                android:title="@string/sort_date"
                app:showAsAction="never"></item>

            <item
                android:id="@+id/user_following_sort_alphabetical"
                android:title="@string/sort_alphabetical"
                app:showAsAction="never"></item>
        </menu>
    </item>

    <item
        android:id="@+id/user_following_more"
        android:icon="@drawable/ic_more"
        android:title=""
        app:showAsAction="always">
        <menu>

            <item
                android:id="@+id/user_following_all_checked"
                android:icon="@drawable/ic_delete_grey_600_24dp"
                android:title="@string/all_checked"
                app:showAsAction="never"></item>

            <item
                android:id="@+id/user_following_no_checked"
                android:icon="@drawable/ic_delete_grey_600_24dp"
                android:title="@string/no_checked"
                app:showAsAction="never"></item>

            <item
                android:id="@+id/user_following_unfollow_checked"
                android:icon="@drawable/ic_delete_grey_600_24dp"
                android:title="@string/unfollow"
                app:showAsAction="never"></item>

            <item
                android:id="@+id/user_following_follow_checked"
                android:icon="@drawable/ic_delete_grey_600_24dp"
                android:title="@string/follow"
                app:showAsAction="never"></item>
        </menu>
    </item>

</menu>