<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/on_demand_genre_detail_thumb_view"
        android:title=""
        android:icon="@drawable/ic_view_thumb_blue_600_24dp"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/on_demand_genre_detail_detail_view"
                android:title=""
                android:icon="@drawable/ic_view_detail_black_24dp"
                app:showAsAction="never"></item>
        </menu>

    </item>

    <item
        android:id="@+id/on_demand_genre_detail_sort"
        android:icon="@drawable/ic_more"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/on_demand_genre_detail_sort_date"
                android:title="@string/sort_date"
                app:showAsAction="never"></item>

            <item
                android:id="@+id/on_demand_genre_detail_sort_alphabetical"
                android:title="@string/sort_alphabetical"
                app:showAsAction="never"></item>

            <item
                android:id="@+id/on_demand_genre_detail_sort_plays"
                android:title="@string/sort_plays"
                app:showAsAction="never"></item>

            <item
                android:id="@+id/on_demand_genre_detail_sort_likes"
                android:title="@string/sort_likes"
                app:showAsAction="never"></item>

            <item
                android:id="@+id/on_demand_genre_detail_sort_comments"
                android:title="@string/sort_comments"
                app:showAsAction="never"></item>

            <item
                android:id="@+id/on_demand_genre_detail_sort_duration"
                android:title="@string/sort_duration"
                app:showAsAction="never"></item>
        </menu>

    </item>

    <item
        android:id="@+id/on_demand_genre_detail_more"
        android:icon="@drawable/ic_more"
        android:title=""
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/on_demand_genre_detail_share"
                android:title="@string/share"
                android:icon="@drawable/ic_share_white_24dp"
                app:showAsAction="never">

            </item>

        </menu>

    </item>


</menu>