<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/project_detail_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title=""
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always">

    </item>

    <item
        android:id="@+id/project_detail_sort"
        android:title="Date modiffied"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/project_detail_sort_title"
                android:title="@string/sort_title"
                app:showAsAction="never"></item>

            <item
                android:id="@+id/project_detail_sort_date_modified"
                android:title="@string/sort_date_modified"
                app:showAsAction="never"></item>

            <item
                android:id="@+id/project_detail_sort_dete_added"
                android:title="@string/sort_date_added"
                app:showAsAction="never"></item>

            <item
                android:id="@+id/project_detail_sort_duration"
                android:title="@string/sort_duration"
                app:showAsAction="never"></item>

        </menu>

    </item>

    <item
        android:id="@+id/project_detail_view_thumb"
        android:title=""
        android:icon="@drawable/ic_view_thumb_blue_600_24dp"
        app:showAsAction="always">

        <menu>

            <item
                android:title=""
                android:id="@+id/project_detail_view_detail"
                android:icon="@drawable/ic_view_detail_black_24dp"
                app:showAsAction="never">

            </item>

        </menu>
    </item>

    <item
        android:id="@+id/project_detail_more"
        android:icon="@drawable/ic_more"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/project_detail_share"
                android:icon="@drawable/ic_share_white_24dp"
                android:title="@string/share"
                app:showAsAction="never"></item>

            <item
                android:id="@+id/project_detail_all_checked"
                android:icon="@drawable/ic_delete_grey_600_24dp"
                android:title="@string/all_checked"
                app:showAsAction="never"></item>

            <item
                android:id="@+id/project_detail_no_checked"
                android:icon="@drawable/ic_delete_grey_600_24dp"
                android:title="@string/no_checked"
                app:showAsAction="never"></item>

            <item
                android:id="@+id/project_detail_delete_checked"
                android:icon="@drawable/ic_delete_grey_600_24dp"
                android:title="@string/album_delete"
                app:showAsAction="never"></item>
        </menu>
    </item>

</menu>