<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/user_on_demand_pages_thumb"
        android:title=""
        android:icon="@drawable/ic_view_thumb_blue_600_24dp"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/user_on_demand_pages_detail"
                android:title=""
                android:icon="@drawable/ic_view_detail_black_24dp"
                app:showAsAction="never"></item>
        </menu>

    </item>

    <item
        android:id="@+id/user_on_demand_pages_sort"
        android:icon="@drawable/ic_more"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/user_on_demand_pages_sort_date"
                android:title="@string/sort_date"
                app:showAsAction="never"></item>

            <item
                android:id="@+id/user_on_demand_pages_sort_alphabetical"
                android:title="@string/sort_alphabetical"
                app:showAsAction="never"></item>

            <item
                android:id="@+id/user_on_demand_pages_sort_name"
                android:title="@string/sort_name"
                app:showAsAction="never"></item>

            <item
                android:id="@+id/user_on_demand_pages_sort_videos"
                android:title="@string/sort_videos"
                app:showAsAction="never"></item>
        </menu>

    </item>

    <item
        android:id="@+id/user_on_demand_pages_more"
        android:icon="@drawable/ic_more"
        android:title=""
        app:showAsAction="always">
        <menu>

            <item
                android:id="@+id/user_on_demand_pages_all_checked"
                android:icon="@drawable/ic_delete_grey_600_24dp"
                android:title="@string/all_checked"
                app:showAsAction="never"></item>

            <item
                android:id="@+id/user_on_demand_pages_no_checked"
                android:icon="@drawable/ic_delete_grey_600_24dp"
                android:title="@string/no_checked"
                app:showAsAction="never"></item>

            <item
                android:id="@+id/user_on_demand_pages_remove_checked"
                android:icon="@drawable/ic_delete_grey_600_24dp"
                android:title="@string/remove"
                app:showAsAction="never"></item>

        </menu>
    </item>

</menu>